<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:layout_marginStart="16dp"
              android:layout_marginLeft="16dp"
              android:layout_marginEnd="16dp"
              android:layout_marginRight="16dp"
              android:layout_marginTop="16dp"
              android:layout_marginBottom="16dp"
>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.github.informramiz.daypickerlibrary.views.CircularTextView
            android:id="@+id/view_sunday"
            android:layout_width="@dimen/circular_text_view_size"
            android:layout_height="@dimen/circular_text_view_size"
            android:text="@string/day_picker_day_sunday"
            android:clickable="true"
            android:focusable="true"/>

        <com.github.informramiz.daypickerlibrary.views.CircularTextView
            android:id="@+id/view_monday"
            android:layout_width="@dimen/circular_text_view_size"
            android:layout_height="@dimen/circular_text_view_size"
            android:text="@string/day_picker_day_monday"
            android:layout_marginStart="@dimen/margin_between_day_view"
            android:layout_marginLeft="@dimen/margin_between_day_view"
            android:clickable="true"
            android:focusable="true"/>

        <com.github.informramiz.daypickerlibrary.views.CircularTextView
            android:id="@+id/view_tuesday"
            android:layout_width="@dimen/circular_text_view_size"
            android:layout_height="@dimen/circular_text_view_size"
            android:text="@string/day_picker_day_tuesday"
            android:layout_marginStart="@dimen/margin_between_day_view"
            android:layout_marginLeft="@dimen/margin_between_day_view"
            android:clickable="true"
            android:focusable="true"/>

        <com.github.informramiz.daypickerlibrary.views.CircularTextView
            android:id="@+id/view_wednesday"
            android:layout_width="@dimen/circular_text_view_size"
            android:layout_height="@dimen/circular_text_view_size"
            android:text="@string/day_picker_day_wednesday"
            android:layout_marginStart="@dimen/margin_between_day_view"
            android:layout_marginLeft="@dimen/margin_between_day_view"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_day_view"
        android:orientation="horizontal">

        <com.github.informramiz.daypickerlibrary.views.CircularTextView
            android:id="@+id/view_thursday"
            android:layout_width="@dimen/circular_text_view_size"
            android:layout_height="@dimen/circular_text_view_size"
            android:text="@string/day_picker_day_thursday"
            android:clickable="true"
            android:focusable="true"/>

        <com.github.informramiz.daypickerlibrary.views.CircularTextView
            android:id="@+id/view_friday"
            android:layout_width="@dimen/circular_text_view_size"
            android:layout_height="@dimen/circular_text_view_size"
            android:text="@string/day_picker_day_friday"
            android:layout_marginStart="@dimen/margin_between_day_view"
            android:layout_marginLeft="@dimen/margin_between_day_view"
            android:clickable="true"
            android:focusable="true"/>

        <com.github.informramiz.daypickerlibrary.views.CircularTextView
            android:id="@+id/view_saturday"
            android:layout_width="@dimen/circular_text_view_size"
            android:layout_height="@dimen/circular_text_view_size"
            android:text="@string/day_picker_day_saturday"
            android:layout_marginStart="@dimen/margin_between_day_view"
            android:layout_marginLeft="@dimen/margin_between_day_view"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</LinearLayout>